# Assignment-D1

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
config/: paper_tree.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
install/oakd_chan/lib/oakd_chan/: alphabet_detection_node  alphabet_detection_real_node  oakd_chan_node  search_for_box_node
install/oakd_chan/share/oakd_chan/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
oakd_chan/: alphabet_detection_node.py  search_for_box_node.py  search_for_paper_node.cpp  search_for_paper_node.py
oakd_chan/install/: local_setup.sh  setup.sh  setup.zsh
oakd_chan/log/: latest_build
src/: behavior_tree_node.cpp
